Revert "JUC high level"
This reverts commit 33937b84055ef711c7140eda73f24ab441acdad4.